# ai-innovation-product-template

./: .env.example  .gitignore  BRANDING.md  Makefile  README.md  capstack.db  docker-compose.yml  railway.json
.github/workflows/: ci.yml  deploy-azure.yml  deploy.yml
backend/: .dockerignore  Dockerfile  capstack.db  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py  items.py  llm.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  llm.py
backend/app/db/: __init__.py  models.py
backend/tests/: test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.toml  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/__tests__/: useApi.test.ts
frontend/src/components/: CapgeminiLogo.vue  NavBar.vue
frontend/src/composables/: useApi.ts  useWebSocket.ts
frontend/src/pages/: ChatView.vue  ExamplesView.vue  HomeView.vue  ItemsView.vue
frontend/src/router/: index.ts
scripts/: init.sh  smoke-test.sh
